// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`digest — model snapshot > richDay 1`] = `
[
  {
    "blocks": [
      {
        "kind": "para",
        "text": "26 July 2026 closed at 3pm. 3,825 units moved and we cannot place 78 of them. Another 305 are on the floor but written up wrong.",
      },
    ],
    "id": "opening",
  },
  {
    "blocks": [
      {
        "columns": [
          {
            "label": "City",
          },
          {
            "align": "right",
            "label": "Units moved",
          },
          {
            "align": "right",
            "label": "At risk",
          },
          {
            "label": "vs last week",
          },
          {
            "label": "Guard register",
          },
        ],
        "footnote": "Bangalore and Hyderabad were checked against three records, not four, so their at-risk numbers are not comparable with the rest.",
        "kind": "table",
        "rows": [
          [
            {
              "text": "Delhi",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "1,204",
            },
            {
              "align": "right",
              "strong": true,
              "text": "34",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Received",
              "tone": "muted",
            },
          ],
          [
            {
              "text": "Bangalore",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "861",
            },
            {
              "align": "right",
              "strong": true,
              "text": "22",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Not received",
              "tone": "danger",
            },
          ],
          [
            {
              "text": "Mumbai",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "742",
            },
            {
              "align": "right",
              "strong": true,
              "text": "12",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Not read yet",
              "tone": "warn",
            },
          ],
          [
            {
              "text": "Pune",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "520",
            },
            {
              "align": "right",
              "strong": true,
              "text": "6",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Received",
              "tone": "muted",
            },
          ],
          [
            {
              "text": "Hyderabad",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "498",
            },
            {
              "align": "right",
              "strong": true,
              "text": "4",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Unreadable",
              "tone": "danger",
            },
          ],
        ],
      },
    ],
    "id": "cities",
    "title": "2 · At risk, by city",
  },
  {
    "blocks": [
      {
        "items": [
          {
            "sub": "Warehouse team",
            "text": "System-Only Entry — 56 units (Delhi 31, Bangalore 25). Odoo booked a customer movement today that nobody at the gate, on the sheet or in the app saw. Confirm the unit moved, or cancel the Odoo entry.",
            "tone": "danger",
          },
          {
            "sub": "Warehouse team",
            "text": "Off-System Movement — 11 units (Delhi 7, Mumbai 4). Trace the unit, then record it on the sheet, the app and Odoo.",
            "tone": "danger",
          },
          {
            "sub": "Ops team",
            "text": "Unclosed Return — 6 units (Pune 4). Find the unit and write it into the inward register.",
            "tone": "danger",
          },
          {
            "sub": "Ops team",
            "text": "Ghost Dispatch — 3 units (Mumbai 3). Establish whether the unit left, then correct the record that is wrong.",
            "tone": "danger",
          },
        ],
        "kind": "list",
      },
      {
        "kind": "para",
        "text": "+2 more jobs, all on the dashboard.",
        "tone": "muted",
      },
    ],
    "id": "actions",
    "title": "Do this today",
  },
  {
    "blocks": [
      {
        "kind": "para",
        "text": "Of the 995 items open today, 612 need nothing from anyone.",
        "tone": "muted",
      },
    ],
    "id": "footer",
  },
  {
    "blocks": [
      {
        "href": "https://auto-reco.vercel.app/dashboard",
        "kind": "cta",
        "label": "View in dashboard",
      },
    ],
    "id": "link",
  },
]
`;

exports[`digest — model snapshot > threePart 1`] = `
[
  {
    "blocks": [
      {
        "kind": "para",
        "text": "26 July 2026 closed at 3pm. 503 units moved and we cannot place 9 of them. Another 187 are on the floor but written up wrong.",
      },
    ],
    "id": "opening",
  },
  {
    "blocks": [
      {
        "kind": "para",
        "text": "Every unit that moved on 28 July 2026, checked against all four records: gate register, ops sheet, delivery app and Odoo.",
      },
      {
        "kind": "bars",
        "legend": "Three of four is usually a missing gate-register line — a paperwork gap, not missing stock. The units genuinely at risk are in the next section.",
        "rows": [
          {
            "caption": "23 in all four · 62 in three · 29 in two · 36 in one · no gate register on 51 of them",
            "label": "Delhi — 150 units",
            "segments": [
              {
                "pct": 15.333333333333332,
                "tone": "good",
              },
              {
                "pct": 41.333333333333336,
                "tone": "muted",
              },
              {
                "pct": 19.333333333333332,
                "tone": "warn",
              },
              {
                "pct": 24,
                "tone": "danger",
              },
            ],
          },
          {
            "caption": "39 in all four · 56 in three · 18 in two · 18 in one · no delivery app on 61 of them",
            "label": "Bangalore — 131 units",
            "segments": [
              {
                "pct": 29.770992366412212,
                "tone": "good",
              },
              {
                "pct": 42.74809160305343,
                "tone": "muted",
              },
              {
                "pct": 13.740458015267176,
                "tone": "warn",
              },
              {
                "pct": 13.740458015267176,
                "tone": "danger",
              },
            ],
          },
          {
            "caption": "Not comparable — the gate register and ops sheet did not file.",
            "label": "Hyderabad",
            "segments": [],
          },
        ],
      },
      {
        "kind": "para",
        "text": "28 July 2026 is the most recent day with all four records in — gate registers reach us about a day late.",
        "tone": "muted",
      },
    ],
    "id": "coverage",
    "title": "1 · Four-way check",
  },
  {
    "blocks": [
      {
        "columns": [
          {
            "label": "City",
          },
          {
            "align": "right",
            "label": "Units moved",
          },
          {
            "align": "right",
            "label": "At risk",
          },
          {
            "label": "vs last week",
          },
          {
            "label": "Guard register",
          },
        ],
        "kind": "table",
        "rows": [
          [
            {
              "text": "Delhi",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "147",
            },
            {
              "align": "right",
              "strong": true,
              "text": "5",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Received",
              "tone": "muted",
            },
          ],
          [
            {
              "text": "Bangalore",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "121",
            },
            {
              "align": "right",
              "strong": true,
              "text": "4",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Received",
              "tone": "muted",
            },
          ],
          [
            {
              "text": "Mumbai (week off)",
              "tone": "muted",
            },
            {
              "align": "right",
              "text": "172",
            },
            {
              "align": "right",
              "strong": false,
              "text": "0",
              "tone": undefined,
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Weekly off",
              "tone": "muted",
            },
          ],
        ],
      },
    ],
    "id": "cities",
    "title": "2 · At risk, by city",
  },
  {
    "blocks": [
      {
        "items": [
          {
            "sub": "Warehouse team",
            "text": "Off-System Movement — 7 units (Delhi 5, Bangalore 2). Odoo booked a customer movement today that nobody at the gate, on the sheet or in the app saw. Confirm the unit moved, or cancel the Odoo entry.",
            "tone": "danger",
          },
        ],
        "kind": "list",
      },
    ],
    "id": "actions",
    "title": "Do this today",
  },
  {
    "blocks": [
      {
        "columns": [
          {
            "label": "City",
          },
          {
            "align": "right",
            "label": "Items",
          },
          {
            "align": "right",
            "label": "Oldest",
          },
          {
            "label": "What",
          },
        ],
        "footnote": "23 in total, 11 of them older than a week.",
        "kind": "table",
        "rows": [
          [
            {
              "text": "Delhi",
            },
            {
              "align": "right",
              "strong": true,
              "text": "14",
            },
            {
              "align": "right",
              "text": "9d",
            },
            {
              "text": "System-Only Entry (8), Register Gap (6)",
            },
          ],
          [
            {
              "text": "Bangalore",
            },
            {
              "align": "right",
              "strong": true,
              "text": "6",
            },
            {
              "align": "right",
              "text": "4d",
            },
            {
              "text": "Unclosed Return (4), +2 more",
            },
          ],
          [
            {
              "text": "Pune",
            },
            {
              "align": "right",
              "strong": true,
              "text": "3",
            },
            {
              "align": "right",
              "text": "3d",
            },
            {
              "text": "Odoo Entry Missing (3)",
            },
          ],
        ],
      },
      {
        "kind": "para",
        "text": "23 Jul could not be re-checked today, so anything still open there is not counted above.",
        "tone": "warn",
      },
    ],
    "id": "ageing",
    "title": "3 · Open more than two days",
  },
  {
    "blocks": [
      {
        "kind": "para",
        "text": "Of the 341 items open today, 145 need nothing from anyone.",
        "tone": "muted",
      },
    ],
    "id": "footer",
  },
  {
    "blocks": [
      {
        "href": "https://auto-reco.vercel.app/dashboard",
        "kind": "cta",
        "label": "View in dashboard",
      },
    ],
    "id": "link",
  },
]
`;
